ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.5.2
    • Affects Version/s: 1.4.0
    • Component/s: Index Maintenance
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Slave log output:

      Tue Apr 13 14:41:19 repl: from host:10.211.143.79:27017
      Tue Apr 13 14:41:35 building new index on

      { _id: 1 }

      for buzzfeed.report
      Tue Apr 13 14:41:35 Buildindex buzzfeed.report idxNo:1 { name: "id", ns: "buzzfeed.report", key:

      { _id: 1 }

      }
      Tue Apr 13 14:41:42 external sort used : 2 files in 6 secs
      Tue Apr 13 14:41:43 done for 1153414 records 7.802secs
      Tue Apr 13 14:41:43 CMD: reIndex buzzfeed.report
      Tue Apr 13 14:41:43 User Exception 10058:not master
      Tue Apr 13 14:41:43 buzzfeed.$cmd Caught Assertion in insert , continuing
      Tue Apr 13 14:41:43 insert exception userassert:not master 0ms
      Tue Apr 13 14:41:43 User Exception 10058:not master
      Tue Apr 13 14:41:43 buzzfeed.$cmd Caught Assertion in insert , continuing
      Tue Apr 13 14:41:43 insert exception userassert:not master 0ms
      Tue Apr 13 14:41:43 repl: applied 5 operations
      Tue Apr 13 14:41:43 repl: end sync_pullOpLog syncedTo: Tue Apr 13 14:41:35 2010 4bc4badf:3

      Actions:

      MASTER:
      > db.report.ensureIndex(

      {time:1}

      );
      > db.report.getIndexes()
      [
      {
      "name" : "id",
      "ns" : "buzzfeed.report",
      "key" :

      { "_id" : 1 }

      },
      {
      "_id" : ObjectId("4bc4ba93b69879591542997a"),
      "ns" : "buzzfeed.report",
      "key" :

      { "time" : 1 }

      ,
      "name" : "time_1"
      }
      ]

      SLAVE:
      > db.report.getIndexes()
      [
      {
      "name" : "id",
      "ns" : "buzzfeed.report",
      "key" :

      { "_id" : 1 }

      },
      {
      "_id" : ObjectId("4bc4b902b698795915429979"),
      "ns" : "buzzfeed.report",
      "key" :

      { "time" : 1 }

      ,
      "name" : "time_1"
      }
      ]
      >

      MASTER:
      > db.report.reIndex()

      SLAVE:
      > db.report.getIndexes()
      [ ]

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Kristina Chodorow (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: