don't use direct client for creating index on slave with reIndex SERVER-1018